Adjustment to some public endpoints
